org.eclipse.fennec.m2x.m2t.parser/src-gen/org/eclipse/fennec/m2x/m2t/parser/M2tParser.java
// Generated from /opt/git/m2m/workspace/org.eclipse.fennec.m2x.m2t.parser/grammar/M2tParser.g4 by ANTLR 4.13.2
package org.eclipse.fennec.m2x.m2t.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class M2tParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BLOCK_OPEN=1, TEXT=2, SLASH_CLOSE=3, CLOSE=4, SLASH=5, KW_MODULE=6, KW_IMPORT=7, 
		KW_EXTENDS=8, KW_TEMPLATE=9, KW_QUERY=10, KW_MACRO=11, KW_FOR=12, KW_IF=13, 
		KW_ELSEIF=14, KW_ELSE=15, KW_LET=16, KW_ELSELET=17, KW_FILE=18, KW_TRACE=19, 
		KW_PROTECTED=20, KW_COMMENT=21, KW_OVERRIDES=22, KW_PUBLIC=23, KW_PRIVATE=24, 
		KW_BEFORE=25, KW_SEPARATOR=26, KW_AFTER=27, KW_GUARD=28, KW_POST=29, KW_SUPER=30, 
		KW_STDOUT=31, LPAREN=32, RPAREN=33, LBRACE=34, RBRACE=35, COMMA=36, SEMICOLON=37, 
		COLONCOLON=38, COLON=39, PIPE=40, EQUALS=41, DOT=42, SAFENAV=43, ARROW=44, 
		SAFEARROW=45, DOTDOT=46, STAR=47, PLUS=48, MINUS=49, LT=50, GT=51, LE=52, 
		GE=53, NE=54, KW_NOT=55, KW_AND=56, KW_OR=57, KW_XOR=58, KW_IMPLIES=59, 
		KW_SELF=60, KW_TRUE=61, KW_FALSE=62, KW_NULL=63, KW_INVALID=64, KW_IN=65, 
		KW_THEN=66, KW_ENDIF=67, KW_SET=68, KW_ORDEREDSET=69, KW_BAG=70, KW_SEQUENCE=71, 
		KW_COLLECTION=72, KW_MAP=73, KW_TUPLE=74, KW_BOOLEAN=75, KW_INTEGER=76, 
		KW_REAL=77, KW_STRING=78, KW_UNLIMITEDNATURAL=79, KW_OCLANY=80, KW_OCLVOID=81, 
		KW_OCLINVALID=82, KW_OCLMESSAGE=83, KW_WITH=84, LARROW=85, REAL_LITERAL=86, 
		INTEGER_LITERAL=87, STRING_LITERAL=88, ESCAPED_IDENTIFIER=89, IDENTIFIER=90, 
		CODE_WS=91, CODE_LINE_COMMENT=92, CODE_BLOCK_COMMENT=93;
	public static final int
		RULE_module = 0, RULE_moduleDecl = 1, RULE_metamodelList = 2, RULE_extendsDecl = 3, 
		RULE_importDecl = 4, RULE_moduleElement = 5, RULE_commentBlock = 6, RULE_templateDef = 7, 
		RULE_signature = 8, RULE_visibility = 9, RULE_overridesDecl = 10, RULE_guard = 11, 
		RULE_postDecl = 12, RULE_initSection = 13, RULE_variableDeclaration = 14, 
		RULE_queryDef = 15, RULE_macroDef = 16, RULE_argList = 17, RULE_argDecl = 18, 
		RULE_body = 19, RULE_bodyElement = 20, RULE_textBlock = 21, RULE_inlineExpression = 22, 
		RULE_forBlock = 23, RULE_beforeClause = 24, RULE_separatorClause = 25, 
		RULE_afterClause = 26, RULE_ifBlock = 27, RULE_elseIfBlock = 28, RULE_elseBlock = 29, 
		RULE_letBlock = 30, RULE_elseLetBlock = 31, RULE_fileBlock = 32, RULE_traceBlock = 33, 
		RULE_protectedBlock = 34, RULE_templateInvocation = 35, RULE_expression = 36, 
		RULE_primaryExpression = 37, RULE_propertyOrCallSuffix = 38, RULE_iteratorOrOperationCall = 39, 
		RULE_iteratorVariables = 40, RULE_argumentList = 41, RULE_letBinding = 42, 
		RULE_literalExpression = 43, RULE_stringLiteral = 44, RULE_collectionLiteral = 45, 
		RULE_collectionKind = 46, RULE_collectionLiteralPart = 47, RULE_tupleLiteral = 48, 
		RULE_tupleLiteralPart = 49, RULE_mapLiteral = 50, RULE_mapLiteralPart = 51, 
		RULE_typeExpression = 52, RULE_primitiveType = 53, RULE_collectionType = 54, 
		RULE_mapType = 55, RULE_tupleType = 56, RULE_tupleTypePart = 57, RULE_pathName = 58, 
		RULE_identifier = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"module", "moduleDecl", "metamodelList", "extendsDecl", "importDecl", 
			"moduleElement", "commentBlock", "templateDef", "signature", "visibility", 
			"overridesDecl", "guard", "postDecl", "initSection", "variableDeclaration", 
			"queryDef", "macroDef", "argList", "argDecl", "body", "bodyElement", 
			"textBlock", "inlineExpression", "forBlock", "beforeClause", "separatorClause", 
			"afterClause", "ifBlock", "elseIfBlock", "elseBlock", "letBlock", "elseLetBlock", 
			"fileBlock", "traceBlock", "protectedBlock", "templateInvocation", "expression", 
			"primaryExpression", "propertyOrCallSuffix", "iteratorOrOperationCall", 
			"iteratorVariables", "argumentList", "letBinding", "literalExpression", 
			"stringLiteral", "collectionLiteral", "collectionKind", "collectionLiteralPart", 
			"tupleLiteral", "tupleLiteralPart", "mapLiteral", "mapLiteralPart", "typeExpression", 
			"primitiveType", "collectionType", "mapType", "tupleType", "tupleTypePart", 
			"pathName", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", null, "'/]'", "']'", "'/'", "'module'", "'import'", "'extends'", 
			"'template'", "'query'", "'macro'", "'for'", "'if'", "'elseif'", "'else'", 
			"'let'", "'elselet'", "'file'", "'trace'", "'protected'", "'comment'", 
			"'overrides'", "'public'", "'private'", "'before'", "'separator'", "'after'", 
			"'?'", "'post'", "'super'", "'stdout'", "'('", "')'", "'{'", "'}'", "','", 
			"';'", "'::'", "':'", "'|'", "'='", "'.'", "'?.'", "'->'", "'?->'", "'..'", 
			"'*'", "'+'", "'-'", "'<'", "'>'", "'<='", "'>='", "'<>'", "'not'", "'and'", 
			"'or'", "'xor'", "'implies'", "'self'", "'true'", "'false'", "'null'", 
			"'invalid'", "'in'", "'then'", "'endif'", "'Set'", "'OrderedSet'", "'Bag'", 
			"'Sequence'", "'Collection'", "'Map'", "'Tuple'", "'Boolean'", "'Integer'", 
			"'Real'", "'String'", "'UnlimitedNatural'", "'OclAny'", "'OclVoid'", 
			"'OclInvalid'", "'OclMessage'", "'with'", "'<-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BLOCK_OPEN", "TEXT", "SLASH_CLOSE", "CLOSE", "SLASH", "KW_MODULE", 
			"KW_IMPORT", "KW_EXTENDS", "KW_TEMPLATE", "KW_QUERY", "KW_MACRO", "KW_FOR", 
			"KW_IF", "KW_ELSEIF", "KW_ELSE", "KW_LET", "KW_ELSELET", "KW_FILE", "KW_TRACE", 
			"KW_PROTECTED", "KW_COMMENT", "KW_OVERRIDES", "KW_PUBLIC", "KW_PRIVATE", 
			"KW_BEFORE", "KW_SEPARATOR", "KW_AFTER", "KW_GUARD", "KW_POST", "KW_SUPER", 
			"KW_STDOUT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "COMMA", "SEMICOLON", 
			"COLONCOLON", "COLON", "PIPE", "EQUALS", "DOT", "SAFENAV", "ARROW", "SAFEARROW", 
			"DOTDOT", "STAR", "PLUS", "MINUS", "LT", "GT", "LE", "GE", "NE", "KW_NOT", 
			"KW_AND", "KW_OR", "KW_XOR", "KW_IMPLIES", "KW_SELF", "KW_TRUE", "KW_FALSE", 
			"KW_NULL", "KW_INVALID", "KW_IN", "KW_THEN", "KW_ENDIF", "KW_SET", "KW_ORDEREDSET", 
			"KW_BAG", "KW_SEQUENCE", "KW_COLLECTION", "KW_MAP", "KW_TUPLE", "KW_BOOLEAN", 
			"KW_INTEGER", "KW_REAL", "KW_STRING", "KW_UNLIMITEDNATURAL", "KW_OCLANY", 
			"KW_OCLVOID", "KW_OCLINVALID", "KW_OCLMESSAGE", "KW_WITH", "LARROW", 
			"REAL_LITERAL", "INTEGER_LITERAL", "STRING_LITERAL", "ESCAPED_IDENTIFIER", 
			"IDENTIFIER", "CODE_WS", "CODE_LINE_COMMENT", "CODE_BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "M2tParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public M2tParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleContext extends ParserRuleContext {
		public ModuleDeclContext moduleDecl() {
			return getRuleContext(ModuleDeclContext.class,0);
		}
		public TerminalNode EOF() { return getToken(M2tParser.EOF, 0); }
		public List<TerminalNode> TEXT() { return getTokens(M2tParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(M2tParser.TEXT, i);
		}
		public List<ImportDeclContext> importDecl() {
			return getRuleContexts(ImportDeclContext.class);
		}
		public ImportDeclContext importDecl(int i) {
			return getRuleContext(ImportDeclContext.class,i);
		}
		public List<ModuleElementContext> moduleElement() {
			return getRuleContexts(ModuleElementContext.class);
		}
		public ModuleElementContext moduleElement(int i) {
			return getRuleContext(ModuleElementContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof M2tParserVisitor ) return ((M2tParserVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TEXT) {
				{
				setState(120);
				match(TEXT);
				}
			}

			setState(123);
			moduleDecl();
			setState(128);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(126);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case TEXT:
						{
						setState(124);
						match(TEXT);
						}
						break;
					case BLOCK_OPEN:
						{
						setState(125);
						importDecl();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(130);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BLOCK_OPEN || _la==TEXT) {
				{
				setState(133);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TEXT:
					{
					setState(131);
					match(TEXT);
					}
					break;
				case BLOCK_OPEN:
					{
					setState(132);
					moduleElement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleDeclContext extends ParserRuleContext {
		public TerminalNode BLOCK_OPEN() { return getToken(M2tParser.BLOCK_OPEN, 0); }
		public TerminalNode KW_MODULE() { return getToken(M2tParser.KW_MODULE, 0); }
		public PathNameContext pathName() {
			return getRuleContext(PathNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(M2tParser.LPAREN, 0); }
		public MetamodelListContext metamodelList() {
			return getRuleContext(MetamodelListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(M2tParser.RPAREN, 0); }
		public TerminalNode SLASH_CLOSE() { return getToken(M2tParser.SLASH_CLOSE, 0); }
		public ExtendsDeclContext extendsDecl() {
			return getRuleContext(ExtendsDeclContext.class,0);
		}
		public ModuleDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof M2tParserVisitor ) return ((M2tParserVisitor<? extends T>)visitor).visitModuleDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDeclContext moduleDecl() throws RecognitionException {
		ModuleDeclContext _localctx = new ModuleDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(BLOCK_OPEN);
			setState(141);
			match(KW_MODULE);
			setState(142);
			pathName();
			setState(143);
			match(LPAREN);
			setState(144);
			metamodelList();
			setState(145);
			match(RPAREN);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_EXTENDS) {
				{
				setState(146);
				extendsDecl();
				}
			}

			setState(149);
			match(SLASH_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetamodelListContext extends ParserRuleContext {
		public List<PathNameContext> pathName() {
			return getRuleContexts(PathNameContext.class);
		}
		public PathNameContext pathName(int i) {
			return getRuleContext(PathNameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(M2tParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(M2tParser.COMMA, i);
		}
		public MetamodelListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metamodelList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof M2tParserVisitor ) return ((M2tParserVisitor<? extends T>)visitor).visitMetamodelList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetamodelListContext metamodelList() throws RecognitionException {
		MetamodelListContext _localctx = new MetamodelListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_metamodelList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			pathName();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(152);
				match(COMMA);
				setState(153);
				pathName();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExtendsDeclContext extends ParserRuleContext {
		public TerminalNode KW_EXTENDS() { return getToken(M2tParser.KW_EXTENDS, 0); }
		public List<PathNameContext> pathName() {
			return getRuleContexts(PathNameContext.class);
		}
		public PathNameContext pathName(int i) {
			return getRuleContext(PathNameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(M2tParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(M2tParser.COMMA, i);
		}
		public ExtendsDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extendsDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof M2tParserVisitor ) return ((M2tParserVisitor<? extends T>)visitor).visitExtendsDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExtendsDeclContext extendsDecl() throws RecognitionException {
		ExtendsDeclContext _localctx = new ExtendsDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_extendsDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(KW_EXTENDS);
			setState(160);
			pathName();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(161);
				match(COMMA);
				setState(162);
				pathName();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclContext extends ParserRuleContext {
		public TerminalNode BLOCK_OPEN() { return getToken(M2tParser.BLOCK_OPEN, 0); }
		public TerminalNode KW_IMPORT() { return getToken(M2tParser.KW_IMPORT, 0); }
		public PathNameContext pathName() {
			return getRuleContext(PathNameContext.class,0);
		}
		public TerminalNode SLASH_CLOSE() { return getToken(M2tParser.SLASH_CLOSE, 0); }
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof M2tParserVisitor ) return ((M2tParserVisitor<? extends T>)visitor).visitImportDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(BLOCK_OPEN);
			setState(169);
			match(KW_IMPORT);
			setState(170);
			pathName();
			setState(171);
			match(SLASH_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
